objects/smlfcom__SML_Default_Text_Filter__mdt.object
<CustomObject>
    <fields>
        <fullName>smlfcom__Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Field_Label__c</fullName>
        <label>Field Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Field_Value__c</fullName>
        <label>Field Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>SML Default Text Filter</label>
    <pluralLabel>SML Default Text Filters</pluralLabel>
</CustomObject>